# algo-engineering-cpp

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
Apple/: README.md
Apple/raw data/: Combined_LeetCode_Questions.xlsx
CONTRIBUTING.md/: README.md
data/: Adobe_Questions.xlsx.xlsx  Amazon_Questions.xlsx.xlsx  Atlassian_Questions.xlsx.xlsx  BlackRock_Questions.xlsx.xlsx  Bloomberg_Questions.xlsx.xlsx  ByteDance_Questions.xlsx.xlsx  CRED_Questions.xlsx.xlsx  Cisco_Questions.xlsx.xlsx  Citadel_Questions.xlsx.xlsx  DEShaw_Questions.xlsx.xlsx  Databricks_Questions.xlsx.xlsx  Dell_Questions.xlsx.xlsx  Deolite_Questions.xlsx.xlsx  Flipkart_Questions.xlsx.xlsx  Goldman Sachs_Questions.xlsx.xlsx  Google_Questions.xlsx.xlsx  IBM_Questions.xlsx.xlsx  Intel_Questions.xlsx.xlsx  Intuit_Questions.xlsx.xlsx  JP Morgan_Questions.xlsx.xlsx  Linkedln_Questions.xlsx.xlsx  Meta_Questions.xlsx.xlsx  Microsoft_Questions.xlsx.xlsx  Morgan Stanley_Questions.xlsx.xlsx  NVIDIA_Questions.xlsx  Netflix_Questions.xlsx.xlsx  Ola_Questions.xlsx  Oracle_Questions.xlsx  Palantir_Questions.xlsx  PayPal_Questions.xlsx  Qualcomm_Questions.xlsx  Salesforce_Questions.xlsx  ServiceNow_Questions.xlsx  Snap_Questions.xlsx  Spotify_Questions.xlsx  Stripe_Questions.xlsx.xlsx  Swiggy_Questions.xlsx  Tesla_Questions.xlsx.xlsx  Twitter_Questions.xlsx.xlsx  Uber_Questions.xlsx.xlsx  (+5 more)
hubs/topics/: Optimized_Master.csv  Ultimate_Master.csv
metadata/: database.json
scripts/: auto_discover.py  generate_docs.py  start.py
src/: README.md
src/Adobe/: README.md
src/Amazon/: README.md
(+63 files in other folders)
